<resources>
    <string name="app_name" translatable="false">Tellyou</string>
    <string name="facebook_app_id" translatable="false">220163765224412</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb220163765224412</string>
    <string name="error_code_100_description">Server error, please try again</string>
    <string name="error_code_200_description">Object doesn\'t exist</string>
    <string name="error_code_202_description">Object already exist</string>
    <string name="error_code_300_description">Not authenticated/authorized</string>
    <string name="error_code_301_description">User blocked</string>
    <string name="error_code_500_description">Request validation error</string>
    <string name="error_code_1000_description">Username is already in use</string>
    <string name="error_code_1001_description">Email is already in use</string>
    <string name="error_code_2000_description">Uploading error</string>
    <string name="error_code_3000_description">You must sign in with facebook</string>
    <string name="error_code_3001_description">Password doesn\'t match</string>
    <string name="error_code_3002_description">There\'s been a problem authenticating with facebook</string>
    <string name="error_code_5000_description">You cannot vote to your own question</string>
    <string name="error_code_5001_description">You cannot vote to this question</string>
    <string name="error_code_5002_description">Voting is ended</string>
    <string name="error_code_5003_description">Requested option does not exist</string>
    <string name="error_code_5004_description">This user has already voted for this question</string>
    <string name="error_code_202_phone_already_exist">This phone number already exist</string>
    <string name="error_code_202_email_already_exist">This email already exist</string>
    <string name="error_code_202_follow">You already following this user</string>
    <string name="error_code_202_bookmark_post">You already bookmarked this post</string>
    <string name="error_code_202_cake_post">You already caked this post</string>
    <string name="error_code_200_un_follow">You are not following this user</string>
    <string name="error_code_200_code_confirmation">Confirmation code invalid</string>
    <string name="error_code_200_post_not_exist">Post doesn\'t exist</string>
    <string name="error_code_200_get_user_details">User doesn\'t exist</string>
    <string name="error_code_200_sign_in">Email doesn\'t exist</string>
    <string name="error_code_200_forgot_password">Email doesn\'t exist</string>
    <string name="label_forgot_password"><u>Forgot Password</u></string>
    <string name="error_username_length">Username length should be between %1$d and %2$d characters</string>
    <string name="error_password_length">Password length should be between %1$d and %2$d characters</string>
    <string name="error_username">Username must be without spaces and special characters</string>
    <string name="error">Error</string>
    <string name="tab_suggestions">Suggestions</string>
    <string name="btn_ok">Ok</string>
    <string name="label_following">Following</string>
    <string name="label_followers">Followers</string>
    <string name="btn_edit_profile">Edit profile</string>
    <string name="btn_following">Following</string>
    <string name="btn_follow">Follow</string>
    <string name="special">\@</string>
    <string name="label_log_out">Log out</string>
    <string name="label_contact_us">Contact us</string>
    <string name="label_terms_of_service">Terms of service</string>
    <string name="label_privacy_policy">Privacy policy</string>
    <string name="label_about">About Tellyou</string>
    <string name="globalbit_website">http://globalbit.co.il/</string>
    <string name="v">v</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_save_profile">Save profile</string>
    <string name="btnFollowing">Following</string>
    <string name="btn_set">Set</string>
    <string name="btn_cancel">Cancel</string>
    <string name="dialog_loading_content">Please wait&#8230;</string>
    <string name="dialog_loading_title">Loading</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_camera">Camera</string>
    <string name="title_crop_image">Crop image</string>
    <string name="label_delete_video">Delete video</string>
    <string name="label_report_reply">Report this reply</string>
    <string name="dialog_delete_video">Delete this video?</string>
    <string name="dialog_delete_reply">Delete this reply?</string>
    <string name="btn_delete">Delete</string>
    <string name="title_comments">No replies</string>
    <string name="hint_user_name">Choose a unique username</string>
    <string name="hint_full_name">Your full name</string>
    <string name="hint_bio">Tell about yourself</string>
    <string name="tab_videos">My Videos</string>
    <string name="tab_video">Videos</string>
    <string name="label_my_posts_empty">You haven\'t posted anything yet</string>
    <string name="label_user_posts_empty">hasn\'t posted anything yet</string>
    <string name="label_feed_posts_empty">You are not following anyone yet</string>
    <string name="label_followers_empty">No one follows you yet</string>
    <string name="label_user_followers_empty">No one follows %1$s yet</string>
    <string name="label_user_following_empty">%1$s not following anyone yet</string>
    <string name="label_share_title">%1$s shared a video from Tellyou app\n\n\"%2$s\"</string>
    <string name="label_share_via">Share via&#8230;</string>
    <string name="label_sign_up_agreement">By signing up you agree to <u>Terms of Use</u>\n&amp;\n<u>Privacy Policy</u></string>
    <string name="label_log_in_agreement"><![CDATA[By logging in you agree to <u>Terms of Use</u> & <u>Privacy Policy</u>]]></string>
    <string name="label_sign_up_agree">By signing up you agree to</string>
    <string name="label_sign_in_agree">By logging in you agree to</string>
    <string name="validation_username_taken">Username already taken</string>
    <string name="error_username_response">Username length should be between %1$d and %2$d characters and must contain only lowercase letters, numbers, and underscores</string>
    <string name="btn_discover_people">Discover people</string>
    <string name="dialog_title_forgot_password">Forgot password</string>
    <string name="dialog_content_forgot_password">Instruction for password recovery was sent to your email</string>
    <string name="btn_reset_password">Send Instructions</string>
    <string name="hint_email">EMAIL</string>
    <string name="btn_login">Log in</string>
    <string name="label_login"><u>LOG IN</u></string>
    <string name="hint_password">PASSWORD</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="tab_facebook">Connect</string>
    <string name="label_header_facebook_connect">Connect your Facebook account to find friends who already use Tellyou</string>
    <string name="label_header_facebook_connected">Some of your Facebook friends use Tellyou! Follow them</string>
    <string name="label_header_facebook_connected_empty">It seems like your Facebook friends don\'t use TellYou yet</string>
    <string name="label_header_contacts_connected">Some of your contacts use Tellyou! Follow them</string>
    <string name="label_header_contacts_connected_empty">It seems like your contacts don\'t use Tellyou yet</string>
    <string name="label_no_matches">No matches found</string>
    <string name="label_no_replies">Has something to say?\n\nPlease be polite, brief and pleasant.\nYou have only 30 seconds!</string>
    <string name="btn_create_account">Create new account</string>
    <string name="title_discover">Discover people</string>
    <string name="label_how_to_log_in">Choose how to log in</string>
    <string name="label_how_to_create_account">Choose how to create new account</string>
    <string name="label_by_facebook">or by Facebook</string>
    <string name="label_forgot_password_instruction">Enter your Email below and we will send you the instructions on how to reset your password</string>
    <string name="label_add_photo">Add photo</string>
    <string name="label_popular_on_cake">Popular on Tellyou</string>
    <string name="btn_ask_first_question">Post your first video</string>
    <string name="label_developed_by">Developed by</string>
    <string name="dialog_title_internet_connection">Network connection</string>
    <string name="dialog_content_error_internet_connection">There was a problem connecting to server, please check your internet connection</string>
    <string name="label_my_videos">MY VIDEOS</string>
    <string name="label_start_time">00:00</string>
    <string name="btn_exit">Exit</string>
    <string name="dialog_title_permissions_declined">Permissions declined</string>
    <string name="dialog_accept_video_recording_permissions">Please accept all the permissions to start recording video</string>
    <string name="dialog_discard_video">Discard this video?</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_reshoot">Re-shoot</string>
    <string name="dialog_reshoot_video">Re-shoot this video?</string>
    <string name="hint_add_title">Add a title</string>
    <string name="error_new_video_title_empty">Title cannot be empty</string>
    <string name="dialog_video_uploading">Your video will be uploaded to the server</string>
    <string name="label_autoplay">Autoplay next video</string>
    <string name="label_report_video">Report this video</string>
    <string name="title_report_video">Report this video</string>
    <string name="title_report_reply">Report this reply</string>
    <string name="label_reporting_reason">Choose a reason for reporting this video</string>
    <string name="label_reporting_reason_reply">Choose a reason for reporting this reply</string>
    <string name="report_reason_spam">It\'s spam</string>
    <string name="report_reason_inappropriate">It\'s inappropriate</string>
    <string name="report_reason_not_like">I don\'t like this</string>
    <string name="btn_report">Report</string>
    <string name="snack_bar_report_submitted">Your report has been submitted</string>
    <string name="error_reporting_your_video">Your cannot report your own video!</string>
    <string name="error_reporting_your_reply">Your cannot report your own reply!</string>
    <string name="error_birthday_future">Date of birth cannot past the current date</string>
    <string name="tutorial_swipe_up_down">Swipe up and down to change videos</string>
    <string name="tutorial_tap">Tap on video to pause and play it</string>
    <string name="tutorial_drag_left_right">Drag left right to rewind</string>
    <string name="label_popular_videos">Popular videos</string>
    <string name="label_splash">The world\'s podium.</string>
    <string name="label_email_hint">Your email address</string>
    <string name="password_hint">At least %1$d characters</string>
    <string name="error_empty">cannot be empty</string>
    <string name="error_invalid_mail">Email is not valid</string>
    <string name="label_name">NAME*</string>
    <string name="label_username">USERNAME*</string>
    <string name="label_bio">BIO</string>
    <string name="label_birthday">YOUR BIRTHDAY*</string>
    <string name="hint_birthday">It won\'t be shown publicly</string>
    <string name="btn_say_it">Say it!</string>
    <string name="dialog_button_unfollow">Unfollow</string>
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="label_skip">Skip</string>
    <string name="label_enter_confirmation_code">Add confirmation code</string>
    <string name="label_confirmation_code_sent">Confirmation code was sent to</string>
    <string name="label_resend_code"><u>Resend code</u></string>
    <string name="hint_enter_code">Enter code</string>
    <string name="error_wrong_code">Wrong code</string>
</resources>