<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:descendantFocusability="blocksDescendants">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_margin_top"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_how_to_log_in"
                style="@style/LabelTextMediumStyle"/>

            <com.globalbit.tellyou.ui.views.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_margin_top"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/inputEmail"
                app:label="@string/hint_email"
                app:hint="@string/label_email_hint"
                app:type="Email"
                app:name="@string/hint_email"
                app:required="true"/>

            <com.globalbit.tellyou.ui.views.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/inputPassword"
                app:label="@string/hint_password"
                app:type="Password"
                app:name="@string/hint_password"
                app:required="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewForgotPassword"
                android:layout_marginTop="10dp"
                style="@style/LabelTextStyleGreyLight"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_forgot_password"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_by_facebook"
                style="@style/LabelTextMediumStyle"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnFacebook"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/sign_margin_top"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_margin_top"
                android:id="@+id/txtViewAgreement"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                style="@style/LabelTextStyle"
                android:text="@string/label_log_in_agreement"/>

            <Button
                android:id="@+id/btnSignIn"
                android:enabled="false"
                android:layout_marginTop="@dimen/sign_margin_top"
                style="@style/ButtonRegularStyle"
                android:textColor="@color/grey_dark"
                android:text="@string/btn_login"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </ScrollView>
</layout>