<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/label_forgot_password_instruction"
            style="@style/LabelRegularLightStyle"/>
        <EditText
            style="@style/InputTextStyle"
            android:id="@+id/inputEmail"
            android:layout_marginTop="70dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"/>

        <Button
            android:id="@+id/btnResetPassword"
            android:enabled="false"
            android:layout_marginTop="100dp"
            style="@style/ButtonRegularStyle"
            android:textColor="@color/border_inactive"
            android:text="@string/btn_reset_password"/>
    </LinearLayout>
</layout>
