<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            style="@style/Base.Widget.AppCompat.Toolbar"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar"
            android:elevation="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btnBack">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:id="@+id/imgViewBack"
                        android:src="@drawable/ic_back"/>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:fontFamily="@font/assistant_light"
                    android:id="@+id/txtViewSkip"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:text="@string/label_skip"
                    android:layout_centerVertical="true"
                    android:textColor="@color/grey_dark"/>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_enter_confirmation_code"
            style="@style/LabelTextMediumStyle"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_confirmation_code_sent"
            android:layout_marginTop="20dp"
            style="@style/LabelLightSmallTextGreyStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtViewPhoneNumber"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            style="@style/LabelTextMediumStyle"
            android:fontFamily="@font/assistant_regular"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                style="@style/TextBigLightDarkStyle"
                android:textColorHint="@color/border_inactive"
                android:inputType="phone"
                android:background="@android:color/transparent"
                android:hint="@string/hint_enter_code"
                android:id="@+id/inputCode"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/separator"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtViewError"
            android:textSize="13sp"
            android:textColor="#ed4c4c"
            android:fontFamily="@font/assistant_light"
            android:visibility="gone"
            android:text="@string/error_wrong_code"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtViewResendCode"
            android:layout_marginTop="100dp"
            android:text="@string/label_resend_code"
            android:textSize="14sp"
            android:textColor="#fb6901"
            android:fontFamily="@font/assistant_light"
            android:layout_gravity="center_horizontal"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            style="@style/ButtonRegularStyle"
            android:id="@+id/btnContinue"
            android:text="@string/btn_continue"
            android:enabled="false"
            android:textColor="@color/grey_light"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"/>
    </LinearLayout>
</layout>