<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lnrLayoutTutorial"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/background_opacity">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_swap_vert_black_24dp"
            android:tint="@color/white"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:text="@string/tutorial_swipe_up_down"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_panorama_fish_eye_black_24dp"
            android:tint="@color/white"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:text="@string/tutorial_tap"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_swap_horiz_black_24dp"
            android:tint="@color/white"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:text="@string/tutorial_drag_left_right"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/btnOk"
            android:layout_marginTop="50dp"
            android:text="@string/btn_ok"
            android:includeFontPadding="false"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/btn_transparent"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</layout>